<resources>
    <string name="app_name">Disagreeance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome" translatable="false">Welcome to Disagreeance\!</string>
    <string name="ruleText">How to Play</string>
    <string name="startText">Get Started</string>
    <string name="subtitle">The game where debates come to die.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rulebook">1. Get a friend that you want to debate\n2. Pick a category for your debate topic\n3. Click start if you\'re satisfied with the topic or Randomize to get another one\n4. Once you start, pick a side for your debate then get started!</string>
    <string name="debateRulesTitle">How the Debate Works</string>
    <string name="debateRules">1. Each side will have a 1 minute opening statement to introduce the topic and their position\n2. Following the opening statements, each side will have a 30 second counterargument to refute their opponents points\n3. Finally, each side will have a 30 second rebuttal to defend themselves from their opponent\'s counter\n4. When the debate is over the competitors or a third-party will have the opportunity to select who they believe won the debate</string>
    <string name="back">Back</string>
    <string name="categoryTitle">Pick a Category to Debate!</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="tv">TV</string>
    <string name="pickASide">Player 1 Pick a Side!</string>
    <string name="getReady">Player 1, begin your Opening Statement in</string>
</resources>