<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2323f7"
    android:id="@+id/rulesFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    tools:context=".RulesFragment">

    <TextView
        android:id="@+id/howToPlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="650dp"
        android:fontFamily="@font/rakkas"
        android:text="@string/ruleText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rules"
        android:fontFamily="@font/mplus"
        android:text="@string/rulebook"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#c9c9f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howToPlay" />
    <TextView
        android:id="@+id/debateRulesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debateRulesTitle"
        android:fontFamily="@font/rakkas"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/debateRules"
        android:layout_height="wrap_content"
        android:text="@string/debateRules"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#c9c9f5"
        android:fontFamily="@font/mplus"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debateRulesTitle"/>
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="#0404cf"
        android:fontFamily="@font/mplus"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debateRules"/>


</androidx.constraintlayout.widget.ConstraintLayout>