<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2323f7"
    android:id="@+id/pickActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    tools:context=".PickActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryTitle"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textAlignment="center"
        android:fontFamily="@font/rakkas"
        android:text="@string/categoryTitle"
        android:layout_marginBottom="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sportsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:backgroundTint="#0404cf"
        android:fontFamily="@font/mplus"
        android:text="@string/sports"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/musicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0404cf"
        android:fontFamily="@font/mplus"
        android:text="@string/music"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sportsButton"
        app:layout_constraintBottom_toTopOf="@+id/moviesButton"/>
    <Button
        android:id="@+id/moviesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0404cf"
        android:fontFamily="@font/mplus"
        android:text="@string/movies"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicButton"
        app:layout_constraintBottom_toTopOf="@+id/tvButton"/>
    <Button
        android:id="@+id/tvButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0404cf"
        android:fontFamily="@font/mplus"
        android:text="@string/tv"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviesButton"
        app:layout_constraintBottom_toTopOf="@+id/politicsButton"/>
    <Button
        android:id="@+id/politicsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0404cf"
        android:fontFamily="@font/mplus"
        android:text="@string/politics"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvButton"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
        android:id="@+id/backHome"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/home"
        android:backgroundTint="#2323f7"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>